# challanges

./: .gitignore  package.json  pyproject.toml
data-types/primitives/: main.py  python-propertise.yaml
data-types/primitives/string/: main.py  main.ts  python-propertise.yaml
keywords/: README.md  main.py  python-keywords.yaml
