[tool.poetry]
name = "challanges"
version = "0.1.0"
description = ""
authors = ["KuligKamil <kamil.marek.kulig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.991"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
